# stase

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  PLAN.md  README.md  codemeta.json  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: bench_rrse.py
docs/dev/: CHANTIERS.md  ORIGINE_R.md  PLAN.md  RENAMING_PY.md
docs/dev/archive/: CONVERSION_R.md  PLAN.md
docs/dev/archive/harnais_R/: README.md  benchmark.py  benchmark_real.py  compare.py  compare_process_trend.R  compare_process_trend.py  compare_trend.R  compare_trend.py  ref_extraction.R
docs/dev/harnais_R/: README.md  benchmark_real.py  compare.py  compare_process_trend.py  compare_trend.R
docs/img/: README.md
scripts/: set_version.py
src/exstat/: __init__.py  extraction.py  tools.py  trend.py
src/stase/: __init__.py  _display.py  extraction.py  tools.py  trend.py
tests/: conftest.py  test_citation.py  test_extraction.py  test_golden_extraction.py  test_grid.py  test_params.py  test_suffix.py  test_tools.py  test_trend.py
tests/data/ref_extraction/: input_common.csv  sc11_yearmonth_default_output.csv  sc12_month_default_output.csv  sc13_yearseason_default_output.csv  sc14_season_default_output.csv  sc15_yearday_default_output.csv  sc16_none_default_output.csv  sc1_year_default_output.csv  sc2_year_hydro_sep_output.csv  sc3_year_sub_window_output.csv  sc8_year_march15_output.csv  sc9_year_cross_subwindow_output.csv
tests/data/ref_trend/: input_series.csv  mk_results.csv  process_trend_input.csv  pt_sc1_inde_norm.csv  pt_sc2_ar1_nonorm.csv  pt_sc3_inde_period.csv  pt_sc4_inde_change.csv  pt_sc5_extreme_nosignif.csv
