[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stase"
version = "0.1.0"
description = "STASE — STatistical Aggregation & Stationarity Evaluation for daily hydroclimatic time series (Python port of the EXstat R package)"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Louis Héraut", email = "louis.heraut@inrae.fr"},
    {name = "Benjamin Renard", email = "benjamin.renard@inrae.fr"},
    {name = "Valentin Mansanarez"},
]
maintainers = [{name = "Louis Héraut", email = "louis.heraut@inrae.fr"}]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas>=2.2",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff.lint.per-file-ignores]
# tools.py est un port gelé de tools.R : les noms de variables 'l' et 'I'
# suivent les notations du code R/des équations (Hamed 2008)
"src/stase/tools.py" = ["E741"]
# le benchmark configure warnings avant d'importer stase (imports tardifs voulus)
"benchmarks/*" = ["E402"]
